<resources>
    <string name="title_sign_up_email">Sign up with \n email address</string>
    <string name="title_create_your_account">Create your account</string>
    <string name="title_sign_up_complete">Sign up complete</string>
    <string name="title_create_a_password">Create a password</string>
    <string name="title_create_a_username">Choose a username</string>
    <string name="title_pick_profile_picture">Pick a profile picture</string>
    <string name="title_choose_category">What do you want to \n see on Vylo?</string>
    <string name="title_do_not_miss_out">Don\'t miss out</string>
    <string name="label_follow_one_or_more">Follow 1 or more accounts</string>
    <string name="title_enter_verification_code">Enter your \n verification code</string>
    <string name="label_email_unique">Email address is not unique</string>
    <string name="label_user_verified">User is verified</string>
    <string name="label_user_name_unique">User name is not unique</string>
    <string name="label_next">Next</string>
    <string name="label_select_points">Select</string>
    <string name="label_select_points_to_continue">to continue</string>
    <string name="label_email_hint">example@gmail.com</string>
    <string name="label_password">password</string>
    <string name="label_username">username</string>
    <string name="label_gender">Gender</string>
    <string name="label_full_name">full name</string>
    <string name="label_birth_date">birth date</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_other">Other</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_sign_up_complete_description">By continuing you agree to our Terms and Privacy Policy Vylo may use your contact information, including your email address and phone number for purposes in our Privacy Policy.</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_terms">Terms</string>
    <string name="label_cookie_use">Cookie Use</string>
    <string name="label_learn_more">Learn more</string>
    <string name="label_reveal_password">Reveal password</string>
    <string name="label_no_data_available">No data is available</string>
    <string name="label_skip">Skip</string>
    <string name="label_code">Code</string>
    <string name="label_something_wrong">Something went wrong</string>
    <string name="label_create_pass_info">Special characters, not too simple… \n you know the drill</string>
    <string name="label_choose_username_info">Pick a username for your account. You can always \n change it later</string>
    <string name="label_pick_profile_info">Set one now, you can always changelater</string>
    <string name="label_choose_category_info">We’ll curate a bit of everything for your Newsstand. \n Remove any categories below you’re not interested \n in and we’ll take care of the rest.</string>
    <string name="label_do_not_miss_out_info">When you follow someone, you see their \n “response” news posts &amp; original posts in your \n Vylo feed. Follow a few people to get started.</string>
    <string name="label_no_data">No data is available</string>
    <string name="label_success_sign_in">You are successfully signed in</string>
    <string name="edit_profile_error">Edit profile error</string>
    <string name="label_verification_info">By continuing you agree to our Terms and Privacy Policy Vylo may use your contact information, including your email address and phone number for purposes in our Privacy Policy.</string>
    <string name="dot">•</string>
    <string name="tree_fifteen_symbols">8–32 symbols</string>
    <string name="can_contain_underscore">At least one digit and one special character</string>
    <string name="can_contain_underscore_username">Can contain underscores(_) and periods(.)</string>
    <string name="cannot_contain_underscore">At least one uppercase and one lowercase letter</string>
    <string name="cannot_contain_underscore_username">Cannot contain any special characters, dashes(-), or spaces.</string>

</resources>