<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signupcreateusername.presentation.fragment.SignUpCreateUsernameFragment">

    <com.vylo.common.widget.MainNavigationBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_padding_size_extra_small"
                android:layout_marginStart="@dimen/margin_padding_size_medium_mid_small_small"
                android:layout_marginEnd="@dimen/margin_padding_size_medium_mid_small_small">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_large_small_mid"
                    android:gravity="center"
                    android:text="@string/title_create_a_username"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_large_medium_small"
                    android:fontFamily="@font/suisse_lntl_semi_bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_large_small_mid"
                    android:gravity="center"
                    android:text="@string/label_choose_username_info"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_size_micro_mid"
                    android:fontFamily="@font/suisse_lntl_semi_bold" />

                <com.vylo.common.widget.MainInputType
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_xxxlarge_mid"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_small_large">
                    <TableRow android:layout_marginBottom="-5dp">
                        <TextView
                            android:textColor="@color/text"
                            android:textSize="@dimen/text_size_micro_mid"
                            android:fontFamily="@font/suisse_lntl_semi_bold"
                            android:text="@string/dot"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_marginStart="@dimen/margin_padding_size_small_mid_extra"
                            android:textColor="@color/text"
                            android:textSize="@dimen/text_size_micro_mid"
                            android:fontFamily="@font/suisse_lntl_semi_bold"
                            android:layout_width="wrap_content"
                            android:text="@string/tree_fifteen_symbols"
                            android:layout_gravity="center_vertical"/>
                    </TableRow>
                    <TableRow android:layout_marginBottom="-5dp">
                        <TextView
                            android:textColor="@color/text"
                            android:textSize="@dimen/text_size_micro_mid"
                            android:fontFamily="@font/suisse_lntl_semi_bold"
                            android:text="@string/dot"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_marginStart="@dimen/margin_padding_size_small_mid_extra"
                            android:textColor="@color/text"
                            android:maxLines="2"
                            android:textSize="@dimen/text_size_micro_mid"
                            android:fontFamily="@font/suisse_lntl_semi_bold"
                            android:layout_width="wrap_content"
                            android:text="@string/can_contain_underscore_username"
                            android:layout_gravity="center_vertical"/>
                    </TableRow>
                    <TableRow android:layout_marginBottom="-5dp">
                        <TextView
                            android:textColor="@color/text"
                            android:textSize="@dimen/text_size_micro_mid"
                            android:fontFamily="@font/suisse_lntl_semi_bold"
                            android:text="@string/dot"
                            android:layout_marginBottom="8dp"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_marginStart="@dimen/margin_padding_size_small_mid_extra"
                            android:textColor="@color/text"
                            android:textSize="@dimen/text_size_micro_mid"
                            android:fontFamily="@font/suisse_lntl_semi_bold"
                            android:layout_width="wrap_content"
                            android:singleLine="false"
                            android:paddingRight="10dp"
                            android:text="@string/cannot_contain_underscore_username"
                            android:layout_gravity="center_vertical"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    </TableRow>
                </TableLayout>

                <com.vylo.common.widget.MainButton
                    android:id="@+id/next_button"
                    android:layout_width="@dimen/rounded_corner_button_big_width"
                    android:layout_height="@dimen/rounded_corner_button_big_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_medium_small_mid"
                    android:layout_marginTop="@dimen/margin_padding_size_huge_more"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.vylo.common.widget.MainProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>