<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signupchoosecategory.presentation.fragment.SignUpChooseCategoryFragment">

    <com.vylo.common.widget.MainNavigationBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_padding_size_extra_small"
            android:layout_marginStart="@dimen/margin_padding_size_medium_mid_small_small"
            android:layout_marginEnd="@dimen/margin_padding_size_medium_mid_small_small">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/margin_padding_size_large_small_mid"
                android:text="@string/title_choose_category"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_large_medium_small"
                android:fontFamily="@font/suisse_lntl_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_padding_size_large_small_mid"
                android:text="@string/label_choose_category_info"
                android:textColor="@color/text"
                android:gravity="center"
                android:textSize="@dimen/text_size_micro_mid"
                android:fontFamily="@font/suisse_lntl_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_xlarge_mid_small"
                app:layout_constraintTop_toBottomOf="@+id/label_info"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_skip"
                android:textColor="@color/primary"
                android:layout_marginBottom="@dimen/margin_padding_size_large"
                android:fontFamily="@font/suisse_lntl_medium"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_xlarge_mid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chip_group"/>

            <com.vylo.common.widget.MainButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="@dimen/margin_padding_size_xlarge_mid"
                android:layout_marginHorizontal="@dimen/margin_padding_size_medium_small_mid"
                android:layout_marginBottom="@dimen/margin_padding_size_large"
                app:layout_constraintTop_toBottomOf="@+id/button_skip"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>